// Vitest Snapshot v1

exports[`errors > throws error when argument missing (last position) 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Missing argument

Here are the docs for this command:

",
  ],
  [
    "
PARAMETERS

  
  [32mage[39m    [32mnumber[39m       [1m[30m[101m REQUIRED [49m[39m[22m                  [34m✓[39m          
  
",
  ],
]
`;

exports[`errors > throws error when argument missing (non-last position) 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Missing argument

Here are the docs for this command:

",
  ],
  [
    "
PARAMETERS

  
  [32mname[39m   [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m                  [34m✓[39m          
  
  [32mage[39m    [32mnumber[39m       [1m[30m[101m REQUIRED [49m[39m[22m                  [34m✓[39m          
  
",
  ],
]
`;

exports[`errors > validates the  input 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Invalid value for age

Here are the docs for this command:

",
  ],
  [
    "
PARAMETERS

  
  [32mage[39m    [32mnumber[39m       [1m[30m[101m REQUIRED [49m[39m[22m                  [34m✓[39m          
  
",
  ],
]
`;
